--- a/card_editor/card_editor_service-ear/pom.xml
+++ b/card_editor/card_editor_service-ear/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>card_editor_service</artifactId>
+    <artifactId>card_editor</artifactId>
     <groupId>card_editor</groupId>
     <version>1.0.0</version>
   </parent>
@@ -45,7 +45,7 @@
             <groupId>card_editor</groupId>
             <artifactId>card_editor_service-ejb</artifactId>
             <version>1.0.0</version>
-            <type>ejb</type>
+                <type>ejb</type>
         </dependency>
     </dependencies>
 </project>
