--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /card_editor/card_editor_web/target/
 /card_editor/card_editor_web_acesso/target/
 /card_editor/card_editor_acesso/target/
+/card_editor/JavaApplication1/nbproject/private/
+/card_editor/JavaApplication1/build/
+/card_editor/JavaApplication1/dist/
+/card_editor/Arvore/nbproject/private/
+/card_editor/Arvore/build/
+/card_editor/Arvore/dist/
