Acesso ao banco via javascrit

--- a/card_editor/card_editor_service_entity/pom.xml
+++ b/card_editor/card_editor_service_entity/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.2.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
