--- a/card_editor/card_editor_acesso/pom.xml
+++ b/card_editor/card_editor_acesso/pom.xml
@@ -27,13 +27,6 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>br.com.sicredi.arqref.common.util</groupId>
-            <artifactId>sicredi-arqref-common-util</artifactId>
-            <version>1.0.0.12</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/sicredi-arqref-common-locator-04.00.00.00.jar</systemPath>
-        </dependency>
-        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
@@ -81,8 +74,8 @@
                             <verbose>true</verbose>
                             <sourceDestDir>${project.basedir}/src/main/java</sourceDestDir>
                             <wsdlUrls>
-                                <wsdl>http://192.168.56.1:7004/SystemUserServiceImpl/SystemUserService?WSDL</wsdl> 
-                                <wsdl>http://192.168.56.1:7004/PlayerServiceImpl/PlayerService?WSDL</wsdl>
+<!--                                <wsdl>http://192.168.56.1:7004/SystemUserServiceImpl/SystemUserService?WSDL</wsdl> 
+                                <wsdl>http://192.168.56.1:7004/PlayerServiceImpl/PlayerService?WSDL</wsdl>-->
                             </wsdlUrls>
                             
                             <bindingFiles>
