--- a/card_editor/card_editor_service-ejb/pom.xml
+++ b/card_editor/card_editor_service-ejb/pom.xml
@@ -42,6 +42,7 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.2.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
