--- a/card_editor/pom.xml
+++ b/card_editor/pom.xml
@@ -11,7 +11,6 @@
     <module>card_editor_service-ejb</module>
     <module>card_editor_service-bean</module>
     <module>card_editor_service_entity</module>
-    <module>card_editor_web</module>
-    <module>card_editor_acesso</module>
+    <!--<module>card_editor_acesso</module>-->
   </modules>
 </project>
