Criação de conta

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /card_editor/Arvore/nbproject/private/
 /card_editor/Arvore/build/
 /card_editor/Arvore/dist/
+/card_editor/card_editor_web/nbproject/private/
+/card_editor/card_editor_webn_old/nbproject/private/
+/card_editor/card_editor_web_old/src/main/webapp/nbproject/private/
+/card_editor/card_editor_web_old/target/
