--- a/card_editor/card_editor_acesso/pom.xml
+++ b/card_editor/card_editor_acesso/pom.xml
@@ -74,8 +74,7 @@
                             <verbose>true</verbose>
                             <sourceDestDir>${project.basedir}/src/main/java</sourceDestDir>
                             <wsdlUrls>
-<!--                                <wsdl>http://192.168.56.1:7004/SystemUserServiceImpl/SystemUserService?WSDL</wsdl> 
-                                <wsdl>http://192.168.56.1:7004/PlayerServiceImpl/PlayerService?WSDL</wsdl>-->
+                                <!--<wsdl>http://192.168.43.207:7004/CardServiceImpl/CardService?WSDL</wsdl>-->
                             </wsdlUrls>
                             
                             <bindingFiles>
