--- a/card_editor/card_editor_web/WEB-INF/web.xml
+++ b/card_editor/card_editor_web/WEB-INF/web.xml
@@ -5,6 +5,6 @@
 <web-app>
 
     <welcome-file-list>
-        <welcome-file>/public_html/index.html</welcome-file>
+        <welcome-file>/public_html/pages/index.html</welcome-file>
     </welcome-file-list>
 </web-app>
