Telas de poste ajuste acesso

--- a/card_editor/card_editor_web/nbproject/project.properties
+++ b/card_editor/card_editor_web/nbproject/project.properties
@@ -3,4 +3,6 @@ file.reference.card_editor_web-public_html=public_html
 file.reference.card_editor_web-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.card_editor_web-public_html}
+start.file=pages/index.html
 test.folder=${file.reference.card_editor_web-test}
+web.context.root=/card_editor_web
