--- a/card_editor/card_editor_acesso/pom.xml
+++ b/card_editor/card_editor_acesso/pom.xml
@@ -74,7 +74,7 @@
                             <verbose>true</verbose>
                             <sourceDestDir>${project.basedir}/src/main/java</sourceDestDir>
                             <wsdlUrls>
-                                <!--<wsdl>http://192.168.43.207:7004/CardServiceImpl/CardService?WSDL</wsdl>-->
+                                <wsdl>http://192.168.43.207:7004/CardServiceImpl/CardService?WSDL</wsdl>
                             </wsdlUrls>
                             
                             <bindingFiles>
