--- a/card_editor/card_editor_service-ejb/pom.xml
+++ b/card_editor/card_editor_service-ejb/pom.xml
@@ -49,6 +49,11 @@
             <version>3.2.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
